Cambio de link de redes sociales de zibas a yumminuts

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -10,15 +10,15 @@
     },
     "recipes": {
       "title": "Recipes",
-      "description": "Discover delicious recipes with Ziba's. From traditional dishes to innovative creations."
+      "description": "Discover delicious recipes with Yummi Nuts. From traditional dishes to innovative creations."
     },
     "news": {
       "title": "News",
-      "description": "Stay up to date with the latest news and events from Ziba's."
+      "description": "Stay up to date with the latest news and events from Yummi Nuts."
     },
     "products": {
       "title": "Products",
-      "description": "Discover our complete line of Ziba's products. Authentic flavor for the whole family."
+      "description": "Discover our complete line of Yummi Nuts products. Authentic flavor for the whole family."
     },
     "brands": {
       "title": "Our Snack Brands",
@@ -36,20 +36,20 @@
   "social_media": {
    "facebook": {
       "name": "Facebook",
-      "url": "https://www.facebook.com/zibaslatam",
-      "alt": "Facebook de Ziba's",
+      "url": "https://www.facebook.com/yummi.nuts",
+      "alt": "Facebook de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/facebook.svg"
     },
     "instagram": {
       "name": "Instagram",
-      "url": "https://www.instagram.com/zibaslatam",
-      "alt": "Instagram de Ziba's",
+      "url": "https://www.instagram.com/yummi.nuts",
+      "alt": "Instagram de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/instagram.svg"
     },
     "tiktok": {
       "name": "TikTok",
-      "url": "https://www.tiktok.com/@zibaslatam",
-      "alt": "TikTok de Ziba's",
+      "url": "https://www.tiktok.com/@yummi.nuts",
+      "alt": "TikTok de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/tiktok.svg"
     }
   },
