--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -40,20 +40,20 @@
   "social_media": {
    "facebook": {
       "name": "Facebook",
-      "url": "https://www.facebook.com/zibaslatam",
-      "alt": "Facebook de Ziba's",
+      "url": "https://www.facebook.com/yummi.nuts",
+      "alt": "Facebook de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/facebook.svg"
     },
     "instagram": {
       "name": "Instagram",
-      "url": "https://www.instagram.com/zibaslatam",
-      "alt": "Instagram de Ziba's",
+      "url": "https://www.instagram.com/yummi.nuts",
+      "alt": "Instagram de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/instagram.svg"
     },
     "tiktok": {
       "name": "TikTok",
-      "url": "https://www.tiktok.com/@zibaslatam",
-      "alt": "TikTok de Ziba's",
+      "url": "https://www.tiktok.com/@yummi.nuts",
+      "alt": "TikTok de Yummi Nuts",
       "iconUrl": "https://snack.yummiespromociones.com/snacksyummies/tiktok.svg"
     }
   },
