--- a/src/locales/es/products.json
+++ b/src/locales/es/products.json
@@ -26,6 +26,7 @@
     {
       "id": "yumminuts-mani-con-sal",
       "name": "Yumminuts Mani con Sal",
+      "category": "Maní",
       "image": "https://snack.yummiespromociones.com/SnacksyummiesAssets/yummi-nut-mani-con-sal-2.webp",
       "background_color": "white",
       "header_color": "#FDE820",
