--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -197,7 +197,7 @@
     {
       "id": "recipes",
       "text": "Recetas",
-      "href": "/es/recipes"
+      "href": "/es/recetas"
     },
     {
       "id": "health",
@@ -207,12 +207,12 @@
     {
       "id": "news",
       "text": "Noticias",
-      "href": "/es/news"
+      "href": "/es/blog"
     },
     {
       "id": "contact",
       "text": "Contacto",
-      "href": "/es/contact"
+      "href": "/es/contacto"
     }
    
   ],
