--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -324,12 +324,12 @@
   "messagetop":[
     {
       "id":"1",
-      "title":"😎​ ¡Bienvenidos a Snacks Yummies! Si se te antoja un snack, estás en el lugar correcto 🎉",
+      "title":"¡Bienvenidos a Yummi Nuts! Disfruta tus snacks favoritos con sabor natural y auténtico.",
       "link":""
     },
     {
       "id":"2",
-      "title":"😎​ ¡Bienvenidos a Snacks Yummies! Si se te antoja un snack, estás en el lugar correcto 🎉",
+      "title":"¡Bienvenidos a Yummi Nuts! Disfruta tus snacks favoritos con sabor natural y auténtico.",
       "link":""
     }
   ],
