--- a/src/locales/es/contact.json
+++ b/src/locales/es/contact.json
@@ -1,7 +1,7 @@
 {
-  "title": "Contáctanos",
+  "title": "Ponte en contacto con nosotros",
   "subtitle": "¿Tienes preguntas? ¡Estamos aquí para ti!",
-  "description": "ENVÍANOS TUS DUDAS O COMENTARIOS LLENANDO EL FORMULARIO DE LA DERECHA, O CONTÁCTANOS VIA E-MAIL O TELÉFONO.",
+  "description": "Envíanos tus dudas o comentarios llenando el formulario de la derecha, o contáctanos via e-mail o teléfono.",
   "email": "contacto@yummies.com",
   "phone": "1234-56789",
   "form": {
